// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon parse icon 1`] = `
Object {
  "alignItems": "center",
  "borderColor": "currentColor",
  "borderWidth": "1px",
  "display": "inline-flex",
  "height": "18px",
  "selector": Object {
    "& > svg": Object {
      "fill": "currentColor",
      "height": "18px",
      "width": "18px",
    },
  },
  "transitionDelay": "0ms",
  "transitionDuration": "200ms",
  "transitionProperty": "background-color, color, opacity",
  "transitionTimingFunction": "cubic-bezier(0.4, 0, 0.2, 1)",
  "width": "18px",
}
`;

exports[`icon parse icon 2`] = `
Object {
  "alignItems": "center",
  "borderColor": "currentColor",
  "borderWidth": "1px",
  "display": "inline-flex",
  "height": "18px",
  "selector": Object {
    "& > svg": Object {
      "fill": "currentColor",
      "height": "18px",
      "width": "18px",
    },
    "@media screen and (max-width: 120em)": Object {
      "width": "48px",
    },
    "@media screen and (max-width: 80em)": Object {
      "width": "24px",
    },
    "@media screen and (max-width: 93em)": Object {
      "width": "36px",
    },
  },
  "transitionDelay": "0ms",
  "transitionDuration": "200ms",
  "transitionProperty": "background-color, color, opacity",
  "transitionTimingFunction": "cubic-bezier(0.4, 0, 0.2, 1)",
  "width": "18px",
}
`;

exports[`icon parse icon 3`] = `
Object {
  "alignItems": "center",
  "borderColor": "currentColor",
  "borderWidth": "1px",
  "display": "inline-flex",
  "height": "24px",
  "opacity": 0.38,
  "selector": Object {
    "& > svg": Object {
      "fill": "currentColor",
      "height": "24px",
      "width": "24px",
    },
    "@media screen and (max-width: 120em)": Object {
      "width": "48px",
    },
    "@media screen and (max-width: 80em)": Object {
      "width": "24px",
    },
    "@media screen and (max-width: 93em)": Object {
      "width": "36px",
    },
  },
  "transitionDelay": "0ms",
  "transitionDuration": "200ms",
  "transitionProperty": "background-color, color, opacity",
  "transitionTimingFunction": "cubic-bezier(0.4, 0, 0.2, 1)",
  "width": "24px",
}
`;

exports[`icon parse icon 4`] = `
"transition-duration: 200ms;
transition-delay: 0ms;
width: 18px;
display: inline-flex;
align-items: center;
transition-property: background-color, color, opacity;
transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
border-color: currentColor;
height: 18px;
border-width: 1px;
& > svg {
  fill: currentColor;
  width: 18px;
  height: 18px;
}"
`;

exports[`icon parse icon 5`] = `
"transition-duration: 200ms;
transition-delay: 0ms;
width: 18px;
display: inline-flex;
align-items: center;
transition-property: background-color, color, opacity;
transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
border-color: currentColor;
height: 18px;
border-width: 1px;
& > svg {
  fill: currentColor;
  width: 18px;
  height: 18px;
}
@media screen and (max-width: 80em) {
  width: 24px;
}
@media screen and (max-width: 93em) {
  width: 36px;
}
@media screen and (max-width: 120em) {
  width: 48px;
}"
`;

exports[`icon parse icon 6`] = `
"transition-duration: 200ms;
transition-delay: 0ms;
width: 24px;
display: inline-flex;
align-items: center;
transition-property: background-color, color, opacity;
transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
border-color: currentColor;
height: 24px;
border-width: 1px;
opacity: 0.38;
& > svg {
  fill: currentColor;
  width: 24px;
  height: 24px;
}
@media screen and (max-width: 80em) {
  width: 24px;
}
@media screen and (max-width: 93em) {
  width: 36px;
}
@media screen and (max-width: 120em) {
  width: 48px;
}"
`;
